@@ -1373,7 +1373,7 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
     requestCount.incrementAndGet();
     try {
       String scannerName = String.valueOf(scannerId);
-      HInternalScannerInterface s = scanners.get(scannerName);
+      HScannerInterface s = scanners.get(scannerName);
       if (s == null) {
         throw new UnknownScannerException("Name: " + scannerName);
       }
@@ -1433,7 +1433,7 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
     try {
       HRegion r = getRegion(regionName);
       long scannerId = -1L;
-      HInternalScannerInterface s =
+      HScannerInterface s =
         r.getScanner(cols, firstRow, timestamp, filter);
       scannerId = rand.nextLong();
       String scannerName = String.valueOf(scannerId);
@@ -1457,7 +1457,7 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
     requestCount.incrementAndGet();
     try {
       String scannerName = String.valueOf(scannerId);
-      HInternalScannerInterface s = null;
+      HScannerInterface s = null;
       synchronized(scanners) {
         s = scanners.remove(scannerName);
       }
@@ -1472,9 +1472,8 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
     }
   }
 
-  Map<String, HInternalScannerInterface> scanners =
-    Collections.synchronizedMap(new HashMap<String,
-      HInternalScannerInterface>());
+  Map<String, HScannerInterface> scanners =
+    Collections.synchronizedMap(new HashMap<String, HScannerInterface>());
 
   /** 
    * Instantiated as a scanner lease.
@@ -1490,7 +1489,7 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
     /** {@inheritDoc} */
     public void leaseExpired() {
       LOG.info("Scanner " + this.scannerName + " lease expired");
-      HInternalScannerInterface s = null;
+      HScannerInterface s = null;
       synchronized(scanners) {
         s = scanners.remove(this.scannerName);
       }
